<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/RegisterActivity_tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:text="@string/register_title"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/RegisterActivity_tvRequired"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginLeft="62dp"
        android:layout_marginTop="70dp"
        android:text="@string/required"
        android:textColor="#03A9F4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterActivity_tvTitle" />

    <EditText
        android:id="@+id/RegisterActivity_etId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/id"
        app:layout_constraintStart_toStartOf="@+id/RegisterActivity_tvRequired"
        app:layout_constraintTop_toBottomOf="@+id/RegisterActivity_tvRequired" />

    <EditText
        android:id="@+id/RegisterActivity_etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        app:layout_constraintStart_toStartOf="@+id/RegisterActivity_etId"
        app:layout_constraintTop_toBottomOf="@+id/RegisterActivity_etId" />

    <EditText
        android:id="@+id/RegisterActivity_etPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:importantForAutofill="no"
        android:hint="@string/pwd"
        app:layout_constraintStart_toStartOf="@+id/RegisterActivity_etEmail"
        app:layout_constraintTop_toBottomOf="@+id/RegisterActivity_etEmail" />

    <TextView
        android:id="@+id/RegisterActivity_tvOptional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/optional"
        android:textColor="#03A9F4"
        app:layout_constraintStart_toStartOf="@+id/RegisterActivity_etPwd"
        app:layout_constraintTop_toBottomOf="@+id/RegisterActivity_etPwd" />

    <TextView
        android:id="@+id/RegisterActivity_tvSelectImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="88dp"
        android:text="@string/select_image"
        app:layout_constraintStart_toStartOf="@+id/RegisterActivity_tvOptional"
        app:layout_constraintTop_toBottomOf="@+id/RegisterActivity_tvOptional" />

    <ImageView
        android:id="@+id/RegisterActivity_ivSelectImage"
        android:layout_width="273dp"
        android:layout_height="132dp"
        android:layout_marginTop="30dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/RegisterActivity_tvOptional"
        app:layout_constraintTop_toBottomOf="@+id/RegisterActivity_tvOptional" />

    <Button
        android:id="@+id/RegisterActivity_btRegister"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginBottom="52dp"
        android:text="@string/do_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>